plugins {
    id 'java-library'
}
apply plugin: 'kotlin'

configurations.implementation {
    exclude group: "org.jetbrains", module: "annotations"
}

dependencies {
    implementation 'com.github.marschall:zipfilesystem-standalone:1.0.1'
    implementation 'androidx.annotation:annotation:1.5.0'
    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
    implementation 'com.google.guava:guava:30.1.1-jre'
    implementation project(path: ':build-tools:jaxp:xml')


    runtimeOnly ('org.jetbrains.kotlin:kotlin-reflect:1.7.10')

    api 'org.jetbrains.trove4j:trove4j:20160824'
    api files('libs/kotlin-compiler-embeddable-1.7.20-RC.jar')

    compileOnly files('libs/the-unsafe.jar')
    compileOnly project(path: ':android-stubs')
    compileOnly 'org.jetbrains:annotations:24.0.0'
}
repositories {
    mavenCentral()
}
java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}